able to find people by first and last name

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>devCodeCamp &middot; Most Wanted</title>
   </head>
 <body>
-    <script src="app.js"></script>
+    <script src="app.js">
+
+</script>
 </body>
 </html>
